compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_2.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 2,
        },
        end_location: Location {
            row: 1,
            column: 18,
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 2,
                },
                end_location: Location {
                    row: 1,
                    column: 9,
                },
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 2,
                            },
                            end_location: Location {
                                row: 1,
                                column: 9,
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
