compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_3.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 2,
        },
        end_location: Location {
            row: 1,
            column: 23,
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 2,
                },
                end_location: Location {
                    row: 1,
                    column: 9,
                },
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 2,
                            },
                            end_location: Location {
                                row: 1,
                                column: 9,
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 12,
                            },
                            end_location: Location {
                                row: 1,
                                column: 23,
                            },
                            custom: (),
                            node: FormattedValue {
                                value: Located {
                                    location: Location {
                                        row: 1,
                                        column: 3,
                                    },
                                    end_location: Location {
                                        row: 1,
                                        column: 5,
                                    },
                                    custom: (),
                                    node: Constant {
                                        value: Str(
                                            "!",
                                        ),
                                        kind: None,
                                    },
                                },
                                conversion: 0,
                                format_spec: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
