compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_string_concat.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        start: Location {
            row: 1,
            column: 2,
        },
        end: Location {
            row: 1,
            column: 17,
        },
        custom: (),
        node: Expr {
            value: Located {
                start: Location {
                    row: 1,
                    column: 2,
                },
                end: Location {
                    row: 1,
                    column: 9,
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            },
        },
    },
]
