compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_u_f_string_concat_1.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 3,
        },
        end_location: Location {
            row: 1,
            column: 19,
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Location {
                    row: 1,
                    column: 10,
                },
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 3,
                            },
                            end_location: Location {
                                row: 1,
                                column: 10,
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: Some(
                                    "u",
                                ),
                            },
                        },
                    ],
                },
            },
        },
    },
]
